--- a/app/lab4/src/main/res/layout/activity_main.xml
+++ b/app/lab4/src/main/res/layout/activity_main.xml
@@ -10,44 +10,21 @@
         android:id="@+id/fragment_placeholder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/type_options_layout"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/type_options_layout"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/design_default_color_primary_dark"
-        android:gravity="center"
-        android:padding="7dp"
+        app:itemIconTint="@drawable/bottom_nav_state"
+        app:itemTextColor="@drawable/bottom_nav_state"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav" />
 
-        <RadioGroup
-            android:id="@+id/type_options"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
-
-            <RadioButton
-                android:id="@+id/audio_type_option"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="85dp"
-                android:checked="true"
-                android:text="@string/audio_type_option_text"
-                android:textColor="@color/white" />
-
-            <RadioButton
-                android:id="@+id/video_type_option"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/video_type_option_text"
-                android:textColor="@color/white" />
-        </RadioGroup>
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
